--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,7 @@ captures/
 .idea/tasks.xml
 .idea/gradle.xml
 .idea/dictionaries
-.idea/libraries
+.idea/
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
@@ -54,4 +54,5 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+.idea/modules.xml
 
