--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,6 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -38,6 +37,7 @@
             android:value="a4db6d84c5154273549e9dcf7c41f7ee" />
 
         <service android:name="com.amap.api.location.APSService" />
+
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
@@ -48,6 +48,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.StoryDetailsActivity"></activity>
     </application>
 
 </manifest>
