--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,11 @@ dependencies {
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
     compile 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.4.0'
-
+    //json
+    compile 'com.alibaba:fastjson:1.2.44'
+    //okthhp
+    // https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
+    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.9.1'
     //高德地图
     //3D地图so及jar
     compile fileTree(dir: 'libs', include: ['*.jar'])
