--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,11 +40,9 @@
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.amap.api.v2.apikey"
-            android:value="a4db6d84c5154273549e9dcf7c41f7ee" />
+            android:value="eb4b35e5583cfc32d3c8f1040fa46906" />
 
-        <service
-            android:name="com.amap.api.location.APSService"
-            android:enabled="true" />
+        <service android:name="com.amap.api.location.APSService" />
 
         <activity
             android:name=".activity.MainActivity"
@@ -75,7 +73,8 @@
 
         <activity
             android:name=".activity.LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:label="@string/title_activity_login" />
+        <activity android:name=".activity.CollectionActivity"></activity>
     </application>
 
 </manifest>
